# Autonomous-Content-Engine

./: .gitignore  ACE_backend.py  README.md  ace_config.py  demystifying_self-attention_the_engine_behind_modern_llms.md  main.py  pyproject.toml  requirements.txt  self-attention_a_comprehensive_study_guide.md  streamlit_app.py
Notebooks/: 001_ACE_basic.ipynb  001_bwa_basic.ipynb  002_ACE_promptiing.ipynb  003_ACE_Research.ipynb  004_ACE_Image.ipynb  Demystifying Self-Attention in Transformer Architectures.md  Unpacking Self-Attention in Transformer Architectures.md  practice_001.ipynb  tavily_test.ipynb  the_state_of_multimodal_llms_in_2026_a_developers_outlook.md  unlocking_context_a_deep_dive_into_self-attention_for_developers.md
